--- a/example/index.html
+++ b/example/index.html
@@ -1,9 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <title>Example</title>
   </head>
   <body>
     <div id="app"></div>
-    <script src="./index.jsx"></script>
+    <script type="module" src="./index.jsx"></script>
   </body>
 </html>
